--- a/_sass/_1200.scss
+++ b/_sass/_1200.scss
@@ -109,12 +109,12 @@
   margin-top: -20%;
   width: 52%;
   z-index: 2;
-  float: right;
+  margin-left: 48%;
 }
 
 
 .format__point_three{
-  margin-top: 20%;
+  margin-top: -5%;
   width: 52%;
   z-index: 3;
 }
@@ -123,11 +123,12 @@
   margin-top: -20%;
   width: 52%;
   z-index: 2;
-  float: right;
+  margin-left: 48%;
+
 }
 
 .format__point_five{
-  margin-top: 20%;
+  margin-top: -5%;
   width: 52%;
   z-index: 1;
 }
