--- a/_sass/_768.scss
+++ b/_sass/_768.scss
@@ -102,36 +102,32 @@
 
 
 .format__point_one{
-  width: 70%;
+  width: 80%;
   z-index: 1;
 }
 
 
 .format__point_two{
-  margin-top: 20%;
-  width: 70%;
-  z-index: 2;
-  float: right;
+  margin-top: 10%;
+  margin-left: 20%;
+  width: 80%;
 }
 
 
 .format__point_three{
-  margin-top: 20%;
-  width: 70%;
-  z-index: 3;
+  margin-top: 10%;
+  width: 80%;
 }
 
 .format__point_four{
-  margin-top: 20%;
-  width: 70%;
-  z-index: 2;
-  float: right;
+  margin-top: 10%;
+  margin-left: 20%;
+  width: 80%;
 }
 
 .format__point_five{
-  margin-top: 20%;
-  width: 70%;
-  z-index: 1;
+  margin-top: 10%;
+  width: 80%;
 }
 
 .format__illustration-wrapper{
