--- a/_sass/_960.scss
+++ b/_sass/_960.scss
@@ -19,31 +19,34 @@
 }
 
 
+
+.format__point_one{
+  width: 60%;
+}
+
+
 .format__point_two{
-  margin-top: -20%;
-  width: 52%;
-  z-index: 2;
-  float: right;
+  margin-top: -10%;
+  width: 60%;
+  margin-left: 48%;
 }
 
 
 .format__point_three{
-  margin-top: 20%;
-  width: 52%;
-  z-index: 3;
+  margin-top: -5%;
+  width: 60%;
 }
 
 .format__point_four{
-  margin-top: -20%;
-  width: 52%;
-  z-index: 2;
-  float: right;
+  margin-top: -5%;
+  width: 60%;
+  margin-left: 48%;
+
 }
 
 .format__point_five{
-  margin-top: 20%;
-  width: 52%;
-  z-index: 1;
+  margin-top: -5%;
+  width: 60%;
 }
 
 .format__illustration-wrapper{
@@ -53,15 +56,10 @@
 
 
 .format__statement{
-  padding: 0 60px 40px 60px;
+  padding: 0px 60px 40px 60px;
 
 }
 
-
-.format__statement{
-  padding: 0 40px 40px 40px;
-
-}
 
 
 .members {
