--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,16 +1,18 @@
-$red: #ff0068;
-$blue: #000049;
+$red: #FF0036;
+$blue: #0168FC;
 $green: #0F7676;
 $green2: #03A678;
 $mint: #00ffc2;
-$cyan: #0000ff;
+$cyan: #00FFF9;
 $grey-bright: #F2F2F2;
 $grey-mid: #E7E7E7;
 $grey-dark: #999999;
 $black: #000000;
 $white: #FFFFFF;
 $dark-red: #C53C3C;
-$orange: #ffcf4d;
+$orange: #FFB61B;
+$purple: #4C00C8;
+
 
 
 .fond_blue_gradient {
@@ -19,6 +21,15 @@ $orange: #ffcf4d;
 	background: -moz-linear-gradient(-30deg, #0205FF, #00F7D6, #0188FB); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(-30deg, #00F7D6, #0188FB); /* Standard syntax */
 }
+
+
+.fond_darkblue_gradient {
+ 	background: -webkit-linear-gradient(-30deg, #8E01EA, #0500C3); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(-30deg, #8E01EA, #0500C3); /* For Opera 11.1 to 12.0*/
+	background: -moz-linear-gradient(-30deg, #8E01EA, #0500C3); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(-30deg, #8E01EA, #0500C3); /* Standard syntax */
+}
+
 
 .fond_red_gradient {
  	background: -webkit-linear-gradient(-30deg, #FF0168, #FFA822); /* For Safari 5.1 to 6.0 */
@@ -42,6 +53,7 @@ $orange: #ffcf4d;
 }
 
 
+
 .fond__red { background-color: $red;}
 .fond__dark-red {background-color: $dark-red;}
 .fond__cyan { background-color: $cyan;}
@@ -49,6 +61,8 @@ $orange: #ffcf4d;
 .fond__green { background-color: $green;}
 .fond__grey-bright { background-color: $grey-bright;}
 .fond__grey-mid { background-color: $grey-mid;}
+.fond__purple { background-color: $purple;}
+
 .fond__grey-grey { background-color: #CDCDCD;}
 
 .fond__white { background-color: $white;}
@@ -130,6 +144,13 @@ $orange: #ffcf4d;
 	color: $grey-bright;
 	a, a:hover, a:visited, a:focus {
 		color: $grey-bright;
+	}
+}
+
+.text__purple { 
+	color: $purple;
+	a, a:hover, a:visited, a:focus {
+		color: $purple;
 	}
 }
 
@@ -223,7 +244,7 @@ div, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 h1, .h1,.jumbotron h1,  h2, .h2, h3, .h3 {
 	margin: 24px 0;
 	text-transform: uppercase;
-	font-size: 24px;
+	font-size: 30px
 }
 
 h4, .h4 {
@@ -247,6 +268,7 @@ a, a:hover, a:active {
 		text-decoration: underline;
 	}
 }
+
 
 .fond__white p a {
 }
@@ -326,10 +348,10 @@ label {
 }
 
 
-.highlight-orange {
-	@extend .fond__orange;
+.highlight-purple {
+	@extend .fond__purple;
 	@extend .text__white;
-	@include inline-background($orange);
+	@include inline-background($purple);
 }
 
 .form-control, .btn {
@@ -694,6 +716,12 @@ $keep: 44 + 2 * 15px;
 		width: 240px;
 		height: 240px;
 
+		background: linear-gradient( #fff, #ccc );
+    transition: all 0.45s;
+    
+    &:hover{
+      background: linear-gradient( #ccc, #fff );
+    }
 
 	}
 
@@ -795,7 +823,7 @@ $keep: 44 + 2 * 15px;
 	}
 
 	h2, h3 {
-		font-size: 18px;
+		font-size: 30px;
 	}
 }
 
@@ -1115,39 +1143,6 @@ $keep: 44 + 2 * 15px;
 
 
 
-.format__point_one{
-	width: 52%;
-	z-index: 1;
-}
-
-
-.format__point_two{
-	margin-top: -20%;
-	width: 52%;
-	z-index: 2;
-	float: right;
-}
-
-
-.format__point_three{
-	margin-top: 20%;
-	width: 52%;
-	z-index: 3;
-}
-
-.format__point_four{
-	margin-top: -20%;
-	width: 52%;
-	z-index: 2;
-	float: right;
-}
-
-.format__point_five{
-	margin-top: 20%;
-	width: 52%;
-	z-index: 1;
-}
-
 .format__illustration-wrapper{
 	text-align: right;
 }
@@ -1156,5 +1151,19 @@ $keep: 44 + 2 * 15px;
 
 .format__statement{
 	padding: 0 60px 40px 60px;
+
+}
+
+
+.join__statement {
+	padding: 30px 60px;
+	margin: 20px 0;
+}
+
+
+.goals {
+	p {
+		font-size: 25px;
+	}
 
 }
