--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,16 +10,11 @@ layout: base
 
 
 		<div class="row">
-			<div class="col-lg-10 post" >
+			<div class="col-lg-10 col-lg-offset-1 post" >
 				{% include post.html %}
+
+				<a href="/blog" class="btn btn-start">Zurück zum Blog </a>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1 post-page-nav" >
-					<a href="/blog">~ Zurück zum Blog ~</a>
-			</div>
-		</div>
-
 	</div>
 </div>
