--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -420,6 +420,14 @@ label {
 	font-size: 18px;
 }
 
+.btn-blog{
+	background-color: #00F7D6;
+	color: $white;
+	margin-top:1px;
+	padding: 5px 10px;
+	font-size: 18px;
+}
+
 .btn-start:hover {
 	background-color: #00EEF8;
 	color: $white;
