--- a/_includes/post-teaser.html
+++ b/_includes/post-teaser.html
@@ -4,7 +4,7 @@
     </div>
     <div class="post-meta">
         <span class="blog-author-and-date"> von {{ post.author }} am {{ post.date | date: "%d.%m.%y" }}</span><br>
-        
+
         {% unless post.tags == empty %}
             <span class="blog-tags"> in: {% for tag in post.tags %} <a href="/blog/{{ tag | replace:' ','-' | downcase }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %} {% endfor %}</span>
         {% endunless %}
@@ -20,8 +20,8 @@
 
     <div class="post-description">
         <p>
-            {{ post.excerpt | remove: '<p>' | remove: '</p>'}}
-                <font color="#C0C0C0"><a href="{{ post.url }}">Mehr...</a></font>
+            {{ post.excerpt | remove: '<p>' | remove: '</p>'}} <br>
+                <font color="#C0C0C0"><a class="btn btn-blog" href="{{ post.url }}">Mehr</a></font>
         </p>
     </div>
 </div>
