reposition parallax background

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1273,7 +1273,7 @@ a.fa:hover {
   min-height: 500px;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
-  background-position: center;
+  background-position: 0 7em;
   background-repeat: no-repeat;
   background-size: contain;
 }
