--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -64,64 +64,76 @@
 	</div>
 
 	{{ content }}
+</div>
 
-	<footer>
-		<div class="beneath-sections jumbotron fond__white meta-links-foot">
-			<div class="container text-uppercase">
-				<div class="row">
-					<div class="col-md-6">
-						<p>
-							Fragen? So erreichst du uns: <br/>
-							E-Mail: <a href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
-							Telefon: <a href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
-							Adresse: Singerstraße 109, 10179 Berlin
-						</p>
-					</div>
-					<div class="col-md-6">
-						<p>
-							Du möchtest auf dem Laufenden bleiben? Dann melde Dich für unseren <a href="#">Newsletter</a> an!
-						</p>
-					</div>
+<footer>
+	<div class="beneath-sections jumbotron fond__white meta-links-foot">
+		<div class="container text-uppercase">
+			<div class="row">
+				<div class="col-md-6">
+					<p>
+						Fragen? So erreichst du uns: <br/>
+						E-Mail: <a href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
+						Telefon: <a href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
+						Adresse: Singerstraße 109, 10179 Berlin
+					</p>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<a href="/impressum">Impressum</a>
-					</div>
+				<div class="col-md-6">
+					<p>
+						Du möchtest auf dem Laufenden bleiben? Dann melde Dich für unseren <a href="#">Newsletter</a> an!
+					</p>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						Folge uns auf <a href="#" class="fa fa-facebook"></a>
-						<a href="#" class="fa fa-twitter"></a>
-						<a href="#" class="fa fa-google"></a>
-						<a href="#" class="fa fa-linkedin"></a>
-					</div>
-				</div>
-
 			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<a href="/impressum">Impressum</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					Folge uns auf <a href="https://facebook.com/demokratielabs" target="_blank" class="fa fa-facebook"></a>
+					<a href="https://twitter.com/demokratielabs" target="_blank" class="fa fa-twitter"></a>
+					<a href="https://instagram.com/demokratielabs" target="_blank" class="fa fa-instagram"></a>
+				</div>
+			</div>
+
 		</div>
-</div>
-<div class="fond__white partner">
-	<div class="container">
-		<ul>
-			<li>
-				<a href="http://www.okfn.de/">
-					<img class="okfn-logo img-responsive" src="/static/img/OKFN.png" alt="OKFN Logo"/>
-				</a>
-			</li>
-			<!-- <li>
-			 <a href="http://bmfsfj.de/">
-				 <img class="img-responsive" width="400" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
-			 </a>
-		 </li>
-	 </ul>
- </div>
-</div>
+	</div>
+	<div class="beneath-sections jumbotron fond__white partner">
+		<div class="container">
+			<div class="row">
+				<div class="container-md-12">
+					<h3>Ein Projekt von</h3>
+					<ul>
+						<li>
+							<a href="http://www.okfn.de/">
+								<img class="okfn-logo img-responsive" src="/static/img/OKFN.png" alt="OKFN Logo"/>
+							</a>
+						</li>
+						<li>
+							<a href="http://bmfsfj.de/">
+								<img class="img-responsive" width="400" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<p class="text-center">
+						<small>
+							Die Open Knowledge Foundation Deutschland ist ein eingetragener Verein, Vereinsregister-Nr. VR 30468 B.
+							Die Inhalte dieser Webseite sind, sofern nicht anders angegeben, nach
+							<a href="https://creativecommons.org/licenses/by/4.0/deed.de">Creative Commons 4.0 Attribution</a> lizensiert.
+						</small>
+					</p>
+				</div>
+			</div>
+	 	</div>
+	</div>
 </footer>
-</div>
 
-{% include piwik.html %}
 
-</div>
 </body>
 
 </html>
