--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: base
 
 ---
 
-<div class="fond__white">
+<div class="fond__white margin-top-huge">
 	<div class="container">
 
-		<h1>{% if page.tagpage %}: {{ page.title }}{% endif %}</h1>
+		<!--<h1>{% if page.tagpage %}: {{ page.title }}{% endif %}</h1>-->
 
 
 		<div class="row">
