--- a/_sass/_768.scss
+++ b/_sass/_768.scss
@@ -6,143 +6,133 @@
 }
 
 .logo {
-	float: left;
+  float: left;
 }
 
-.main-nav-wrapper {
-	// display: none;
+.main-nav-wrapper  {
+  // display: none;
 }
 
 #animation-wrapper {
-	position: absolute;
-	width: 40%;
-	margin-top: 11%;
-	padding: 0;
+  position: absolute;
+  width: 40%;
+  margin-top: 11%;
+  padding: 0;
 
-	h1 {
-		font-size: 26px;
-		margin: 0;
-	}
+  h1 {
+    font-size: 26px;
+    margin: 0;
+  }
 }
 
-
-
-
 .jumbotron {
-	padding: 70px;
+  padding: 70px;
 }
 
 .meta-links-foot {
-	padding: 35px ;
+  padding: 35px;
 }
 
 .highlight-hero {
-	// margin-left: 10px;
+  // margin-left: 10px;
 }
 
 .nav-meta {
-	display: inherit;
+  display: inherit;
 }
 
 .lab-map-home {
-	height: 600px;
+  height: 600px;
 }
 
 .lab-map-city {
-	height: 400px;
+  height: 400px;
 }
 
 .members .member {
-	min-width: 50%;
+  min-width: 50%;
 }
 
 .post {
-	.event-wrapper {
-		padding: 80px;
-	}
+  .event-wrapper {
+    padding: 80px;
+  }
 }
 
 .partner {
 
-	ul {
-	}
+  ul {
+  }
 
-	li {
-		float: left;
-		display: block;
-		width: 18%;
-		margin-right: 2.5%;
-		&:last-child {
-			margin-right: 0;
-		}
-	}
+  li {
+    float: left;
+    display: block;
+    width: 18%;
+    margin-right: 2.5%;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 
-	img {
-		width: 100%;
-		margin-bottom: 0;
-	}
+  img {
+    width: 100%;
+    margin-bottom: 0;
+  }
 
-	.okfn-logo {
-		max-width: 100%;
-		padding-top: 20px
-	}
+  .okfn-logo {
+    max-width: 100%;
+    padding-top: 20px
+  }
 
 }
 
 .title {
 
   p {
-    font-size: 22px;
+    font-size: 20px;
     line-height: 1.5;
     padding-bottom: 60px;
   }
 }
 
-
-
-
-.format__point_one{
+.format__point_one {
   width: 80%;
   z-index: 1;
+  height: 40em;
 }
 
-
-.format__point_two{
+.format__point_two {
   margin-top: 10%;
   margin-left: 20%;
   width: 80%;
 }
 
-
-.format__point_three{
+.format__point_three {
   margin-top: 10%;
   width: 80%;
 }
 
-.format__point_four{
+.format__point_four {
   margin-top: 10%;
   margin-left: 20%;
   width: 80%;
 }
 
-.format__point_five{
+.format__point_five {
   margin-top: 10%;
   width: 80%;
 }
 
-.format__illustration-wrapper{
+.format__illustration-wrapper {
   text-align: right;
 }
 
-
-
-.format__statement{
+.format__statement {
   padding: 0 60px 40px 60px;
 
 }
 
-
-.format__statement{
+.format__statement {
   padding: 0 40px 40px 40px;
 
 }
