--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -265,7 +265,7 @@ a {
 =            Typography            =
 ==================================*/
 
-$body-font-size: 18px;
+$body-font-size: 20px;
 
 body {
   font-size: $body-font-size;
@@ -284,13 +284,25 @@ div, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 h1, .h1, .jumbotron h1, h2, .h2, h3, .h3 {
   margin: 24px 0;
   text-transform: uppercase;
-  font-size: 30px
+  font-size: 25px
+}
+
+h2 .h2 {
+  font-size: 23px;
+}
+
+h3, .h3 {
+  font-size: 21px;
 }
 
 h4, .h4 {
   text-transform: uppercase;
   margin: 28px 0;
   line-height: 28px;
+}
+
+p {
+  text-align: justify;
 }
 
 a, a:hover, a:active {
@@ -340,7 +352,7 @@ label {
 }
 
 .jumbotron {
-  font-size: 18px;
+  font-size: $body-font-size;
   margin-bottom: 0;
 
   p {
@@ -796,6 +808,10 @@ $keep: 44 + 2 * 15px;
   img {
     display: none;
   }
+}
+
+.event-wrapper {
+  background-color: transparent;
 }
 
 .post {
