add new BMF... Logo

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -112,7 +112,7 @@
 						</li>
 						<li>
 							<a href="http://bmfsfj.de/">
-								<img class="img-responsive" width="400" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
+								<img class="img-responsive" src="/static/img/BMFSFJ_DL_mitFoerderzusatz_RZ_neu.png" alt="BMFSFJ" />
 							</a>
 						</li>
 					</ul>
