--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1289,7 +1289,7 @@ a.fa:hover {
   min-height: 500px;
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
-  background-position: 0 7em;
+  background-position: center 7em;
   background-repeat: no-repeat;
   background-size: contain;
 }
