--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -129,6 +129,13 @@
 					</p>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-lg-12">
+					<p class="text-center">
+						<small>Grafik: CC-BY-NC-ND, Illustrator: Christoph Hoppenbrock</small>
+					</p>
+				</div>
+			</div>
 	 	</div>
 	</div>
 </footer>
