set image sizes of footer

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1297,3 +1297,15 @@ a.fa:hover {
 .slick-prev:before, .slick-next:before {
   color: black
 }
+
+footer img {
+
+}
+
+.logo-okf {
+  width: 19em;
+}
+
+.logo-bmfsfj {
+  width: 35em;
+}
