--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -104,18 +104,20 @@
 			<div class="row">
 				<div class="container-md-12">
 					<h3>Ein Projekt von</h3>
-					<ul>
-						<li>
+						<div class="row">
 							<a href="http://www.okfn.de/">
-								<img class="okfn-logo img-responsive" src="/static/img/OKFN.png" alt="OKFN Logo"/>
+								<img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
 							</a>
-						</li>
-						<li>
+						</div>
+						<div class="row">
 							<a href="http://bmfsfj.de/">
-								<img class="img-responsive" src="/static/img/BMFSFJ_DL_mitFoerderzusatz_RZ_neu.png" alt="BMFSFJ" />
+								<img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ_DL_mitFoerderzusatz_RZ_neu.png" alt="BMFSFJ" />
 							</a>
-						</li>
-					</ul>
+						</div>
+
+
+
+
 				</div>
 			</div>
 			<div class="row">
