--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -80,7 +80,7 @@
 				</div>
 				<div class="col-md-6">
 					<p>
-						Du möchtest auf dem Laufenden bleiben? Dann melde Dich für unseren <a href="#">Newsletter</a> an!
+						Du möchtest auf dem Laufenden bleiben? Dann melde Dich für unseren <a href="https://okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&id=3b8102edce&utm_source=Demokratielabore&utm_campaign=6190cc3b7a-EMAIL_CAMPAIGN_2017_08_22&utm_medium=email&utm_term=0_3b8102edce-6190cc3b7a-128971577">Newsletter</a> an!
 					</p>
 				</div>
 			</div>
