--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -107,7 +107,7 @@
             <div class="row text-uppercase">
                 <div class="col-lg-12">
                     <a href="/impressum">Impressum</a>  
-                    <!--<a href="/presse">Presse</a>-->
+                    <a href="/presse">Presse</a>
                 </div>
             </div>
         </div>
