--- a/_sass/_1200.scss
+++ b/_sass/_1200.scss
@@ -170,3 +170,15 @@
     height: 240px;
   }
 }
+
+.parallax {
+  /* The image used */
+  background-image: url("/static/img/illustration_vorab_dl.png");
+  /* Set a specific height */
+  height: 550px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center 8em;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
