--- a/_sass/_768.scss
+++ b/_sass/_768.scss
@@ -89,8 +89,8 @@
 .title {
 
   p {
-    font-size: 20px;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 1.2;
     padding-bottom: 60px;
   }
 }
@@ -136,5 +136,15 @@
 
 }
 
-
+.parallax {
+  /* The image used */
+  background-image: url("/static/img/illustration_vorab_dl.png");
+  /* Set a specific height */
+  height: 420px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center 8em;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
