--- a/_sass/_960.scss
+++ b/_sass/_960.scss
@@ -1,3 +1,4 @@
+
 .format__illustration{
 	padding: 20%;
 }
@@ -80,4 +81,16 @@
     width: 240px;
     height: 240px;
   }
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("/static/img/illustration_vorab_dl.png");
+  /* Set a specific height */
+  height: 400px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center 8em;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
