--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -62,17 +62,17 @@
 
 
 <footer>
-	<div class="beneath-sections jumbotron fond_darkblue_gradient text__white">
-		<div class="container text__white">
+	<div class="beneath-sections jumbotron fond_darkblue_gradient">
+		<div class="container text__blue-bright ">
         <div class="col-lg-12 title">
-				<h2> Du hast Fragen? Du erreichst uns...</h2>
+				<h2> Du hast Fragen? Du erreichst uns</h2>
 				<p>	
-					...per Mail: <a class="highlight-white" href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
-					...per Telefon: <a class="highlight-white" href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
-					...vor Ort: Singerstraße 109, 10179 Berlin<br><br>
-					...oder hier: <a class="highlight-white" href="https://facebook.com/demokratielabs">Facebook</a> 
-					<a class="highlight-white" href="https://twitter.com/demokratielabs">Twitter</a>
-					<a class="highlight-white" href="https://instagram.com/demokratielabs">Instagram</a>
+					per Mail: <a class="text__white" href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
+					per Telefon: <a class="text__white" href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
+					vor Ort: Singerstraße 109, 10179 Berlin<br><br>
+					oder hier: <a class="text__white" href="https://facebook.com/demokratielabs">Facebook</a> 
+					<a class="text__white" href="https://twitter.com/demokratielabs">Twitter</a>
+					<a class="text__white" href="https://instagram.com/demokratielabs">Instagram</a>
 					<br><br>
 				</p>
 			</div>	
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row text-uppercase">
                 <div class="col-lg-12">
-                    <a href="/impressum">Impressum</a>  
+                    <a href="/impressum">Impressum</a> |  
                     <a href="/presse">Presse</a>
                 </div>
             </div>
