--- a/_sass/_481.scss
+++ b/_sass/_481.scss
@@ -279,3 +279,16 @@ p {
     height: 240px;
   }
 }
+
+
+.parallax {
+  /* The image used */
+  background-image: url("/static/img/illustration_vorab_dl.png");
+  /* Set a specific height */
+  height: 320px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center 8em;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
