--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/animate.css">
 	<link rel="stylesheet" href="/static/css/main.css?v=1.4">
-	<!--<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />-->
+	<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
 
 	<script src="/static/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<script src="/static/js/jquery-1.11.2.min.js"></script>
