--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -63,8 +63,8 @@
 
 <footer>
 	<div class="beneath-sections jumbotron fond_darkblue_gradient">
-		<div class="container text__blue-bright ">
-        <div class="col-lg-12 title">
+		<div class="container text__blue-bright footer">
+        <div class="col-lg-12">
 				<h2> Du hast Fragen? Du erreichst uns</h2>
 				<p>	
 					per Mail: <a class="text__white" href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
