--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -20,8 +20,12 @@ layout: base
             {{ content }}
         </div> 
     </div>
+
+<div class="rss-feed col-lg-2">
+    <h3><a href="/feed.xml">RSS Feed</a></h3>
 </div>
 
+</div>
 <script src="/static/js/jquery.infinitescroll.min.js"></script>
 
 
