--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1333,3 +1333,12 @@ footer img {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+
+.intro {
+
+  h2{
+    text-transform: none;
+    margin: 70px 0 0 0;
+  }
+}
