fix social-og image preview

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,7 @@ $grey-bright: #F2F2F2;
 $grey-mid: #E7E7E7;
 $grey-dark: #999999;
 $black: #000000;
-$white: #FFFFFF;
+$white: #ffffff;
 $dark-red: #C53C3C;
 $orange: #FFB61B;
 $purple: #4C00C8;
