--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,14 @@ $dark-red: #C53C3C;
 $orange: #FFB61B;
 $purple: #4C00C8;
 
+p{
+  -moz-hyphens: auto;
+  -o-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
 .fond_blue_gradient {
   background: -webkit-linear-gradient(-30deg, #00F7D6, #0188FB); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(-30deg, #00F7D6, #0188FB); /* For Opera 11.1 to 12.0*/
@@ -206,7 +214,7 @@ $purple: #4C00C8;
 .text__white {
   color: $white;
   a:hover {
-      color: #1000FF;
+      color: $black;
   }
 }
 
@@ -220,15 +228,15 @@ body {
 }
 
 a:hover {
- text-decoration: underline;}
+ text-decoration: none;}
 
 a {
   text-decoration: none;
 }
 
 .logo {
-  width: 300px;
-
+  width: 150px;
+  margin: 20px 20px 20px 5px;
 }
 
 .navbar {
@@ -259,9 +267,11 @@ a {
 }
 
 @mixin inline-background($color) {
-  box-shadow: 10px 0 0 $color, -10px 0 0 $color;
   display: inline;
-  margin: 0 10px;
+  margin: 0px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 3px;
 }
 
 /*-----  End of Helpers  ------*/
@@ -289,7 +299,7 @@ div, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 h1, .h1, .jumbotron h1, h2, .h2, h3, .h3 {
   margin: 24px 0;
   text-transform: uppercase;
-  font-size: 25px
+  font-size: 22px
 }
 
 h2, .h2 {
@@ -436,10 +446,17 @@ label {
 }
 
 .meta-links-foot {
-  text-transform: uppercase;
-  a, a:hover, a:visited, a:active {
-    //color: $black;
-    //text-decoration: underline;
+  a{
+    text-decoration: none;
+    margin-right: 10px;
+
+    &:last-of-type{
+      margin-right: 0;
+    }
+
+    &:hover{
+      color: $purple;
+    }
   }
 ;
 }
@@ -460,7 +477,7 @@ label {
 =  Elements & Modifiers          =
 ================================*/
 .jumbotron {
-  padding: 15px 0;
+  padding: 25px;
 }
 
 .btn {
@@ -550,8 +567,8 @@ label {
 }
 
 .mobile-menu-toggle {
-  right: 15px;
-  top: 30px;
+  right: 25px;
+  top: 25px;
 }
 
 .navbar {
@@ -559,8 +576,6 @@ label {
   border-radius: 0;
   box-shadow: none;
   margin-bottom: 0;
-  padding: 30px;
-
 }
 
 .body-wrap {
@@ -572,7 +587,7 @@ label {
 .title {
 
   p {
-    font-size: 30px;
+    font-size: 20px;
     line-height: 1.5;
     padding-bottom: 60px;
   }
@@ -583,45 +598,41 @@ $keep: 44 + 2 * 15px;
 
 .nav-wrap {
   position: absolute;
-  top: 0;
-  right: calc(-100% + #{$keep});
-  width: calc(100% - #{$keep});
   height: 100%;
   padding: 15px;
-}
+  left:0;
+  z-index: 10;
 
-.page-wrap {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-  transition: -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  position: relative;
-}
-
-.mobile-menu-open .page-wrap {
-  -webkit-transform: translateX(calc(-100% + #{$keep}));
-  transform: translateX(calc(-100% + #{$keep}));
+  @include transition(transform .25s ease);
+  transform: translateX(0%);
+  &.gone{
+    transform: translateX(-100%);
+  }
 }
 
 .main-nav-wrapper {
   .nav-pills > li {
     border: 2px solid transparent;
+    display: inline-block;
+
     a {
-      padding: 0 5px;
+      padding: 3px 6px 0 6px;
       color: $black;
       text-decoration: none;
+
+      &:hover{
+        background-color: transparent;
+        color: $purple;
+      }
+
     }
   }
 
   .nav-pills .current {
-    border: 2px solid $purple;
-    display: inline-block;
+    a{
+      color: $purple;
+    }
   }
-}
-
-.nav-pills > li {
-  float: none;
 }
 
 .marker {
@@ -676,7 +687,7 @@ $keep: 44 + 2 * 15px;
 /* Newsletter Signup */
 
 .form-control {
-  height: 40px;
+  height: 44px;
   padding: 6px 12px;
   color: $black;
   border: none;
@@ -711,6 +722,9 @@ $keep: 44 + 2 * 15px;
   }
 }
 
+.partner-container{
+  width: 75%;
+}
 .partner {
   ul {
     margin: 0;
@@ -748,8 +762,9 @@ $keep: 44 + 2 * 15px;
 
   .member-avatar {
     margin: 60px auto 10px auto;
-    width: 240px;
-    height: 240px;
+    width: 100%;
+    height: auto;
+
   }
 }
 
@@ -787,7 +802,7 @@ $keep: 44 + 2 * 15px;
   }
 
   img {
-    max-width: 80%;
+    max-width: 100%;
     margin: 50px 0 30px 0;
   }
 
@@ -1016,47 +1031,29 @@ $keep: 44 + 2 * 15px;
   font-size: 20px;
 }
 
-/*  MENUEEE STAAART  */
-
-.mobile-menu-toggle {
-  display: none;
-}
-
 .nav-meta {
   text-align: right;
 }
 
 .nav-wrap {
-  top: 40px;
-  right: 18px;
-  //z-index: 1001;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
   padding: 0;
-}
-
-.page-wrap {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-  transition: -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  position: fixed;
-  width:100%;
-  top: 0;
-  height:10em;
-  z-index: 10000;
-}
-
-.mobile-menu-open .page-wrap {
-  -webkit-transform: translateX(calc(-100% + #{$keep}));
-  transform: translateX(calc(-100% + #{$keep}));
 }
 
 .main-nav-wrapper {
 
-  .nav-pills > li {
-    a {
+  position: relative;
+  top:50%;
+  transform: translateY(-50%);
+  z-index: 1;
+
+  .nav-pills {
+    text-align: center;
+    li{
+      display: block;
+      float: none;
     }
   }
 
@@ -1064,10 +1061,6 @@ $keep: 44 + 2 * 15px;
     display: block;
   }
 
-}
-
-.nav-pills > li {
-  float: right;
 }
 
 #animation-wrapper {
@@ -1156,8 +1149,12 @@ $keep: 44 + 2 * 15px;
 }
 
 .join__statement {
-  padding: 30px 60px;
+  padding: 30px;
   margin: 20px 0;
+}
+
+.gradient-box{
+  padding: 0;
 }
 
 .goals {
