news teaser updates event teaser added (check /_data/events-vorlage.yml)

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,14 +9,14 @@ layout: base
 <div class="beneath-sections jumbotron fond__white">
     <div class="col-lg-8 col-lg-offset-2 title">
         <div class="container text-center text__black">
-            <h1>Neues, News und Neuigkeiten</h1>
+            <h1 class="section-headline">Neues, News und Neuigkeiten</h1>
         </div>
     </div>
 </div>
 
 <div class="beneath-sections jumbotron fond__white">
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 blog-main" >
+        <div class="col-lg-6 col-lg-offset-3 blog-main" >
             {{ content }}
         </div> 
     </div>
