--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -7,6 +7,9 @@
 @import "../_sass/mixins";
 @import "../_sass/base";
 @import "../_sass/hero";
+@import "../_sass/events-panel";
+@import "../_sass/post-teaser";
+@import "../_sass/scrollbars";
 @import "../_sass/mobilemenubutton";
 
 @media screen and (min-width: 375px) {
