--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -1,33 +1,24 @@
-<div class="jumbotron fond__grey-bright text__black cta-news-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-                <div id="mc_embed_signup">
-                    <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center mc-form" target="_blank" novalidate>
-
-                    <h3>Newsletter</h3>
-                    <div class="col-lg-10 col-lg-offset-1">      
-                        <p> Du möchtest auf dem Laufenden bleiben? <br /> Dann melde Dich für unseren Newsletter an und bleib über die neusten Entwicklungen informiert.  
-                        </p>
+<div class="beneath-sections jumbotron fond_blue_gradient">
+    <div class="container text__white newsletter-title">
+        <p>
+            Du m&ouml;chtest auf dem Laufenden bleiben? <br>
+            Dann melde Dich f&uuml;r unseren Newsletter an!
+        </p>
+        <div id="mc_embed_signup">
+            <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
+                <div class="mc-field-group form-group form-group-newsletter text-left row">
+                    <div class="col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+                        <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
+                        <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required >
                     </div>
-                    <div class="mc-field-group form-group form-group-newsletter text-left">
-                        <div class="col-lg-5 col-lg-offset-2">
-                            <label for="mce-EMAIL" class="sr-only" >E-Mail</label>
-                            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="E-Mail" required ></div>
-                                <div class="col-lg-3">
-                                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">
-                                        Abonnieren!
-                                    </button>
-                                <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">
-                                     <!-- set to newsletter only-->
-                                    <input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
-                                </div>
-                            </div>
+                    <div class="col-sm-4 col-md-3">
+                        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-mitmachen">Abonnieren!
+                        </button>
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_929f1e07936386d34833e20d1_6c6b5db59f" value="">&lt;!&ndash; set to newsletter only&ndash;&gt;<input type="checkbox" value="1" checked="checked" name="group[16985][1]" id="mce-group[16985]-16985-0" style="display:none;">
                         </div>
                     </div>
-                    </form>    
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
