--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
 
 	{% include head-social-og.html %}
 	<link rel="stylesheet" href="/static/fonts/overpass/overpass.css">
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/animate.css">
 	<link rel="stylesheet" href="/static/css/main.css?v=1.4">
 	<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
@@ -55,8 +55,35 @@
             </div>
         </div>
         <div class="row">
-            <div class="hero-wrap">
+            <div class="hero-wrap"></div>
+            {% if site.data.events  %}
+            <div class="events-wrap container">
+                <div class="events-panel">
+                    <div class="events-panel-inner">
+                        <h3 class="events-headline">Kommende Events</h3>
+                        <ul class="events-list">
+                            {% for event in site.data.events %}
+                            {% if event.url %}
+                            <a href="{{event.url}}" target="_blank">
+                                {% endif %}
+                            <li class="events-item">
+
+                                <div class="event-date">
+                                    {{ event.date }}
+                                </div>
+                                <div class="event-info">
+                                    {{ event.name }},<br/>{{ event.city }}
+                                </div>
+                            </li>
+                                {% if event.url %}
+                            </a>
+                            {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
             </div>
+            {% endif %}
             <div class="content-wrap col-xs-12">
                 {{ content }}
             </div>
@@ -69,8 +96,8 @@
 <footer>
 	<div class="beneath-sections jumbotron fond_darkblue_gradient">
 		<div class="container text__blue-bright footer">
-        <div class="col-lg-12">
-				<h2> Du hast Fragen? Du erreichst uns</h2>
+        <div class="col-lg-12 text-center">
+				<h2 class="section-headline"> Du hast Fragen? Du erreichst uns</h2>
 				<p>	
 					per Mail: <a class="text__white" href="mailto:info@demokratielabore.de">info@demokratielabore.de</a> <br/>
 					per Telefon: <a class="text__white" href="tel:+4930577036660">+49 (0)30 577 036 660</a><br/>
