css fixes after merge

--- a/_includes/newsletter-form.html
+++ b/_includes/newsletter-form.html
@@ -1,9 +1,9 @@
 <div class="beneath-sections jumbotron fond_blue_gradient">
     <div class="container text__white newsletter-title">
-        <p>
+        <h3 class="section-headline text-center">
             Du m&ouml;chtest auf dem Laufenden bleiben? <br>
             Dann melde Dich f&uuml;r unseren Newsletter an!
-        </p>
+        </h3>
         <div id="mc_embed_signup">
             <form action="//okfn.us5.list-manage.com/subscribe/post?u=929f1e07936386d34833e20d1&amp;id=3b8102edce" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate  mc-form " target="_blank" novalidate>
                 <div class="mc-field-group form-group form-group-newsletter text-left row">
