--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,6 +34,13 @@ p{
   background: -o-linear-gradient(-30deg, #8E01EA, #0500C3); /* For Opera 11.1 to 12.0*/
   background: -moz-linear-gradient(-30deg, #8E01EA, #0500C3); /* For Firefox 3.6 to 15 */
   background: linear-gradient(-30deg, #8E01EA, #0500C3); /* Standard syntax */
+
+  a{
+    &:hover, &:visited{
+      color:$dl-mint;
+    }
+  }
+
 }
 
 .fond_red_gradient {
@@ -506,6 +513,10 @@ label {
   background-color: $dl-mint;
   color: $white;
   width: 100%;
+  padding: 12px;
+  &:focus{
+    color: $white;
+  }
 }
 
 .btn-mitmachen:hover {
@@ -737,7 +748,7 @@ $keep: 44 + 2 * 15px;
 }
 
 .form-control {
-  height: 44px;
+  height: 49px;
   padding: 6px 12px;
   color: $black;
   border: none;
